--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,53 @@
+version: "3.8"
 services:
-  db:
-    image: postgres
-    container_name: db
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb
     restart: always
     ports:
-      - "5432:5432"
+      - "27017:27017"
     environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: root
-      POSTGRES_DB: nchls
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: secret
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - mongo_data:/data/db
+
+  mongo-express:
+    image: mongo-express:latest
+    container_name: mongo-express
+    restart: always
+    depends_on:
+      - mongodb
+    ports:
+      - "8081:8081"
+    environment:
+      ME_CONFIG_MONGODB_SERVER: mongodb
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: secret
+      ME_CONFIG_BASICAUTH: "false"
+
+  fastapi:
+    build: ./FastAPI
+    container_name: fastapi
+    restart: always
+    depends_on:
+      - mongodb
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./FastAPI:/app
+    environment:
+      MONGO_USER: admin
+      MONGO_PASSWORD: secret
+      MONGO_HOST: mongodb
+      MONGO_PORT: 27017
+
+  react:
+    build: ./React
+    container_name: react
+    restart: always
+    ports:
+      - "3000:80"
 
 volumes:
-  pgdata:
+  mongo_data:
